feat: complete API 6-8 backend integration